--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
       <div class="input-group">
         <label>Phone No.</label>
-        <input type="tel" placeholder="123 456 7890">
+        <input type="tel" placeholder="123 456 7890" id="contact-phone" onkeyup="validatePhone()">
         <span id="phone-error"></span>
       </div>
 
       <div class="input-group">
-        <label>Email Id</label>
-        <input type="email" placeholder="Enter Email">
+        <label>Email</label>
+        <input type="email" placeholder="Enter Email" id="contact-email" onkeyup="validateEmail()">
         <span id="email-error"></span>
       </div>   
 
       <div class="input-group">
         <label>Your Message</label>
-        <textarea rows="5" placeholder="Enter your message"></textarea>
+        <textarea rows="5" placeholder="Enter your message" id="contact-message" onkeyup="validateEMessage()"></textarea>
         <span id="message-error"></span>
       </div>
 
