--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
       <div class="input-group">
         <label>Your Message</label>
-        <textarea rows="5" placeholder="Enter your message" id="contact-message" onkeyup="validateEMessage()"></textarea>
+        <textarea rows="5" placeholder="Enter your message" id="contact-message" onkeyup="validateMessage()"></textarea>
         <span id="message-error"></span>
       </div>
 
-    <button>Submit</button>
+    <button onclick="return validateForm()">Submit</button>
     <span id="submit-error"></span>
    
   </form>
